<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/srl_matches_today"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".matches_today.presentation.MatchesTodayFragment">

    <TextView
        android:id="@+id/tv_matches_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/matches_today"
        android:fontFamily="@font/klaudia_bold"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_tables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:paddingBottom="96dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/tv_matches_today">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_leagues_matches_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/leagues"
                android:fontFamily="@font/klaudia_oblique_bold"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_leagues_matches_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_leagues_matches_today" />

            <TextView
                android:id="@+id/tv_live_matches_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="20dp"
                android:text="@string/live_matches"
                android:visibility="gone"
                tools:visibility="visible"
                android:fontFamily="@font/klaudia_oblique_bold"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_leagues_matches_today" />

            <com.jama.carouselview.CarouselView
                android:id="@+id/cv_live_matches_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:visibility="gone"
                tools:visibility="visible"
                app:spacing="32"
                app:layout_constraintTop_toBottomOf="@+id/tv_live_matches_today" />

            <TextView
                android:id="@+id/tv_timed_matches_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="20dp"
                android:text="@string/all_matches"
                android:fontFamily="@font/klaudia_oblique_bold"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_live_matches_today" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_matches_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_timed_matches_today"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="32dp"
        android:minWidth="32dp"
        android:indeterminateTint="@color/primaryDarkColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>