<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/liveMatchColor"
    app:cardElevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_match_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            tools:text="19:00"
            android:textStyle="bold"
            android:textSize="13sp"
            android:textColor="@color/secondaryDarkColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_match_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_match_date">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_home_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cl_away_team"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_home_team_emblem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/tv_home_team_name">

                    <ImageView
                        android:id="@+id/iv_home_team_emblem"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="24dp"
                        android:scaleType="fitXY"
                        tools:src="@drawable/ic_ball"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/image_home_team"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_home_team_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        tools:text="3"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/secondaryDarkColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_home_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="24dp"
                    tools:text="Home Team"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/secondaryDarkColor"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@+id/cl_home_team_emblem"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_away_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/cl_home_team"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_away_team_emblem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/tv_away_team_name">

                    <TextView
                        android:id="@+id/tv_away_team_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        tools:text="2"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/secondaryDarkColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <ImageView
                        android:id="@+id/iv_away_team_emblem"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="24dp"
                        android:scaleType="fitXY"
                        tools:src="@drawable/ic_ball"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/image_away_team"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_away_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="end"
                    tools:text="Away Team"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/secondaryDarkColor"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@+id/cl_away_team_emblem"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_save_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            tools:text="@string/save"
            android:textColor="@color/secondaryDarkColor"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_match_details"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>